operations/kubernetes/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bc-backend
  namespace: bookcars
spec:
  type: ClusterIP
  ports:
    - port: 4002
      targetPort: 4002
      protocol: TCP
