operations/kubernetes/base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookcars-backend-ingress
  namespace: bookcars
spec:
  ingressClassName: nginx-external
  tls:
    - hosts:
        - HOSTNAME_PLACEHOLDER
      secretName: wildcard-secret
  rules:
    - host: HOSTNAME_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bc-backend
                port:
                  number: 4002
